3.0.101.alpha.1 - 31st January 2023
- Fixed a minor issue with 'Show auction controls' ('Interface') which caused the 'Find Item' button to only show one page of results.

3.0.100 - 30th January 2023
- Updated 'Recent chat window' ('Chat') code and 'Show flight times' ('Interface') code.
- Added flight times.

3.0.99 - 30th January 2023
- Updated LibDBIcon.
- Added flight times.

3.0.98 - 29th January 2023
- Added flight times.

3.0.97 - 28th January 2023
- Added flight times.

3.0.96 - 27th January 2023
- Added flight times.

3.0.95 - 26th January 2023
- Added flight times.

3.0.94 - 25th January 2023
- Added flight times.

3.0.93 - 24th January 2023
- Added flight times.

3.0.92 - 23rd January 2023
- Added flight times.

3.0.91 - 22nd January 2023
- Added flight times.

3.0.90 - 22nd January 2023
- Updated the 'Login' setting code ('Mute game sounds') so that it works the same way as Dragonflight and Classic Era.
- Fixed a situational Lua error with 'Automate quests' ('Automation').
- Added flight times.

3.0.89 - 21st January 2023
- Added flight times.

3.0.88 - 20th January 2023
- For 'Mute game sounds' ('System'), the 'Login' setting now mutes the login screen music too.
- Added flight times.

3.0.87 - 19th January 2023
- Fixed an issue with 'Resize quest text' ('Text') which caused gossip greeting panel scroll lists (such as city guard directions) to be shown outside of the gossip frame.  If you use ElvUI, the 'Resize quest text' option will now be disabled if you have ElvUI Skins > Blizzard > Gossip Frame checked.
- Added flight times.

3.0.86 - 19th January 2023
- Fixed an issue with 'Enhance trainers' ('Interface') which may have caused the trainers frame to open alongside the gossip frame.
- Added flight times.

3.0.85 - 19th January 2023